<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/orderListFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.genarosoft.dms.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.genarosoft.dms.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/checkoutFragment"
        android:name="com.genarosoft.dms.ui.checkout.CheckoutFragment"
        android:label="@string/checkout_fragment_label"
        tools:layout="@layout/fragment_checkout" />
    <fragment
        android:id="@+id/configFragment"
        android:name="com.genarosoft.dms.ui.settings.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/exportFragment"
        android:name="com.genarosoft.dms.ui.export.ExportFragment"
        android:label="@string/export_fragment_label"
        tools:layout="@layout/fragment_export" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.genarosoft.dms.ui.home.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_configFragment"
            app:destination="@id/configFragment" />
        <action
            android:id="@+id/action_homeFragment_to_importFragment"
            app:destination="@id/importFragment" />
        <action
            android:id="@+id/action_homeFragment_to_exportFragment"
            app:destination="@id/exportFragment" />
        <action
            android:id="@+id/action_homeFragment_to_orderListFragment"
            app:destination="@id/orderListFragment" />
        <action
            android:id="@+id/action_homeFragment_to_preferencesFragment"
            app:destination="@id/preferencesFragment" />
    </fragment>
    <fragment
        android:id="@+id/importFragment"
        android:name="com.genarosoft.dms.ui.import.ImportFragment"
        android:label="@string/import_fragment_label"
        tools:layout="@layout/fragment_import" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.genarosoft.dms.ui.login.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/orderFragment"
        android:name="com.genarosoft.dms.ui.order.OrderFragment"
        android:label="@string/order_fragment_label"
        tools:layout="@layout/fragment_order">
        <action
            android:id="@+id/action_orderFragment_to_checkoutFragment"
            app:destination="@id/checkoutFragment" />
        <action
            android:id="@+id/action_orderFragment_to_productListFragment"
            app:destination="@id/productListFragment" />
    </fragment>
    <fragment
        android:id="@+id/orderListFragment"
        android:name="com.genarosoft.dms.ui.orderlist.OrderListFragment"
        android:label="@string/order_list_fragment_label"
        tools:layout="@layout/fragment_order_list">
        <action
            android:id="@+id/action_orderListFragment_to_orderFragment"
            app:destination="@id/orderFragment" />
    </fragment>
    <fragment
        android:id="@+id/preferencesFragment"
        android:name="com.genarosoft.dms.ui.preferences.PreferencesFragment"
        android:label="@string/preferences_fragment_label"
        tools:layout="@layout/fragment_preferences" />
    <fragment
        android:id="@+id/productListFragment"
        android:name="com.genarosoft.dms.ui.productlist.ProductListFragment"
        android:label="@string/product_list_fragment_label"
        tools:layout="@layout/fragment_product_list" >
        <action
            android:id="@+id/action_productListFragment_to_checkoutFragment"
            app:destination="@id/checkoutFragment" />
    </fragment>
</navigation>